# zomboid-architect

./: .commit_msg.md  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  Makefile  README.md  SETUP.md  VERSION  VERSIONING.md  Zomboid_Architect.code-workspace  _test_result.txt  _test_result2.txt  _test_run.py  agent-autonome-mods-pz.md  audit.ps1  commit-msg  docker-compose.pz-agent.yml  docker-compose.yml  doctor.ps1  notion_clean_priority.py  notion_clean_remaining.py  notion_cleanup.py  notion_cleanup2.py  notion_db_check.py  notion_db_check2.py  notion_diagnose.py  notion_fix_p10_items.py  notion_force_fix.py  notion_ids_check.py  notion_priority_check.py  notion_redistribute_p20.py  notion_resync_priorities.py  notion_sync.py  notion_update_schema.py  notion_verify_clean.py  pyproject.toml  pytest.ini  (+5 more)
.claude/: settings.json  settings.local.json
.test_output/: .gitkeep
ElChibros/: CHANGELOG.md  README.md  STRUCTURE.md  VERSIONING.md  __init__.py  conftest.py  engine.py  game_version.py  gitmessage  lock.py  logger.py  manifest.txt  parser.py  promote.py  restore.py
agent/: .agent_memory.md  GOAL.md  README.md  architecture.md  memories.md  rules.md  syntax.md  todo-data-absorption.md  todo.md  todo_storage_migration.md
bot/: .env.example  Dockerfile  README.md  (+7 more)
notion_client/: .env.notion.example  .gitignore  GOVERNANCE.md  README.md  __init__.py  __main__.py  api.py  cli.py  parser.py  pyproject.toml  sync.py
notion_client/tests/: conftest.py
notion_client/tests/unit/: test_api_client.py  test_parser.py  test_sync_logic.py
(+225 files in other folders)
