[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion_client"
version = "1.0.0"
description = "Sync agent/todo.md vers une base de données Notion."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--cov=notion_client",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "unit: Tests unitaires (pas d'I/O réseau)",
    "integration: Tests d'intégration (flux complets)",
]

[tool.coverage.run]
source = ["notion_client"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == .__main__.:',
    "if TYPE_CHECKING:",
]
